# module_ai

./: .dockerignore  .gitignore  CACHING_GUIDE.md  CLOUD_DEPLOYMENT_GUIDE.md  CREDENTIALS_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_DOCUMENTATION.md  DEPLOYMENT_QUICK_REFERENCE.md  Dockerfile  Dockerfile.cloud  Dockerfile.intercom  Dockerfile.ui  README.md  cache_manager.py  cloudbuild.ui.yaml  cloudbuild.yaml  deploy.sh  deploy_ui.sh  discover_tools.py  main.py  main_with_intercom.py  main_with_ui.py  pyproject.toml  requirements.txt  start.sh  start_crm_server.sh  start_server.sh  start_ui.sh  vertex-credentials.json
local/: mcp_proxy.py
mcp_crash_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servers/: cloud_crm_server.py  crm_server.py  crm_tools.py  instance_server.py  instance_tools.py
static/: index.html  index_file.html
utils/: secret_manager.py
