[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-crash-course"
version = "0.1.0"
description = "A demo project for the MCP protocol"
readme = "README.md"
requires-python = ">=3.11" # Update to a compatible Python version
dependencies = [
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-google-vertexai>=1.0.0",
    "langgraph>=0.0.30",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0",
    "aiofiles>=23.2.1",
    "pydantic-settings>=2.2.1",
    "requests>=2.32.3"
]

[tool.setuptools.packages.find]
include = ["servers*"]

[tool.uvicorn.run]
port = 8080